--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 	   				<span>Game Developer</span>
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href	="#about" title="">More About Me</a>
+	   			<a class="button stroke smoothscroll" href	="#about" title="">About Me</a>
+	   			<a class="button stroke smoothscroll" href	="#resume" title="">Work experience</a>
+	   			<a class="button stroke smoothscroll" href	="#portfolio" title="">Portfolio</a>
 
 	   		</div>  
    			
@@ -306,8 +308,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="pdfs/CV_Arnol_Robles_eng.pdf" download="" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
