fixed video size

--- a/index.html
+++ b/index.html
@@ -859,10 +859,10 @@
 							 <div class="splide__track">
 								 <ul class="splide__list">
 									 <li class="splide__slide">
-										 <iframe width="auto" height="315" src="https://www.youtube.com/embed/bBzVSr8cqm0?si=iAnweVwArlB0dwHP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+										 <iframe width="100%" height="315" src="https://www.youtube.com/embed/bBzVSr8cqm0?si=iAnweVwArlB0dwHP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 									 </li>
 									 <li class="splide__slide">
-										 <iframe width="auto" height="315" src="https://www.youtube.com/embed/gDk2OHamoe0?si=AkjrB1ZxHwmu-tSh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+										 <iframe width="100%" height="315" src="https://www.youtube.com/embed/gDk2OHamoe0?si=AkjrB1ZxHwmu-tSh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 									 </li>
 									 <li class="splide__slide">
 										 <img data-splide-lazy="images/portfolio/modals/champions-ascension/champions-1.webp" alt="" />
