--- a/index.html
+++ b/index.html
@@ -290,6 +290,31 @@
 
    		<div class="col-twelve">
 
+            <div class="timeline-wrap">
+
+                <div class="timeline-block">
+
+                    <div class="timeline-ico bg-none">
+                        <img class="img-company" src="images/companies/hyperbeard-icon.png">
+                    </div>
+
+                    <div class="timeline-header">
+                        <h3>Unity Support Developer</h3>
+                        <p>August 2024 - Present</p>
+                    </div>
+
+                    <div class="timeline-content">
+                        <img class="logo-madbricks" src="images/companies/hyperbeard-logo.png">
+                        <h4 class="no-padding-margin-bottom">HyperBeard</h4>
+                        <a class="a-company-link" href="https://hyperbeard.com/" target="_blank">https://hyperbeard.com</a>
+                        <p>Giving support to multiple games made in the company, 
+							helping devs implementing and upgrading SDKs, 3rd party assets and internal frameworks.
+							Colaborating in games like: <b><a href="https://hyperbeard.com/game/fairy-village/" target="_blank">Fairy Village</a>,
+								<a href="https://hyperbeard.com/game/k-pop-academy/" target="_blank">K-Pop Academy</a>.</b></p>
+                    </div>
+
+                </div> <!-- /timeline-block -->
+
    			<div class="timeline-wrap">
 
    				<div class="timeline-block">
@@ -300,7 +325,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Senior Game Developer</h3>
-	   					<p>January 2022 - Present</p>
+	   					<p>January 2022 - August 2024</p>
 	   				</div>
 
 	   				<div class="timeline-content">
